--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -162,6 +162,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdministratorController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Entities\Account.cs">
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
@@ -219,6 +220,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Administrator\CreateProductModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -235,11 +237,13 @@
     <Content Include="Content\Admin\css\stats.css" />
     <Content Include="Content\Admin\css\styles.css" />
     <Content Include="Content\Admin\images\facebook.png" />
+    <Content Include="Content\Image\image_placeholder.jpg" />
     <Content Include="Scripts\Admin\js\calendar.js" />
     <Content Include="Scripts\Admin\js\custom.js" />
     <Content Include="Scripts\Admin\js\editors.js" />
     <Content Include="Scripts\Admin\js\forms.js" />
-    <Content Include="Scripts\Admin\js\ProductCategory\main.js" />
+    <Content Include="Scripts\Admin\js\Administrator\category.js" />
+    <Content Include="Scripts\Admin\js\Administrator\product.js" />
     <Content Include="Scripts\Admin\js\stats.js" />
     <Content Include="Scripts\Admin\js\tables.js" />
     <Content Include="Scripts\Admin\vendors\address\address.css" />
@@ -1176,7 +1180,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\common.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\Admin\bootstrap\fonts\glyphicons-halflings-regular.eot" />
@@ -1328,12 +1332,13 @@
     <Content Include="Views\Administrator\Index.cshtml" />
     <Content Include="Views\Administrator\_PartialAccount.cshtml" />
     <Content Include="Views\Administrator\ViewProductCategory.cshtml" />
-    <Content Include="Views\Administrator\_AddProductCategoryPartial.cshtml" />
+    <Content Include="Views\Administrator\_AddColorPartial.cshtml" />
     <Content Include="Views\Administrator\ViewProduct.cshtml" />
-    <Content Include="Views\Administrator\_AddProductPartial.cshtml" />
+    <Content Include="Views\Administrator\AddProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
