--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -1293,6 +1293,21 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-upload\cors\jquery.postmessage-transport.js" />
+    <Content Include="Scripts\jquery-upload\cors\jquery.xdr-transport.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-angular.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-audio.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-image.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-jquery-ui.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-process.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-ui.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-validate.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload-video.js" />
+    <Content Include="Scripts\jquery-upload\jquery.fileupload.js" />
+    <Content Include="Scripts\jquery-upload\jquery.iframe-transport.js" />
+    <Content Include="Scripts\jquery-upload\vendor\canvas-to-blob.min.js" />
+    <Content Include="Scripts\jquery-upload\vendor\jquery.ui.widget.js" />
+    <Content Include="Scripts\jquery-upload\vendor\load-image.all.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
