--- a/170516/Web.config
+++ b/170516/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v10.0;AttachDbFilename=|DataDirectory|\aspnet-170516-20160517100914.mdf;Initial Catalog=aspnet-170516-20160517100914;Integrated Security=True" providerName="System.Data.SqlClient" />    
-  <add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entities.ConstructionEntity.csdl|res://*/Entities.ConstructionEntity.ssdl|res://*/Entities.ConstructionEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=201THUANNH2;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=yuiop67890);MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entities.ConstructionEntity.csdl|res://*/Entities.ConstructionEntity.ssdl|res://*/Entities.ConstructionEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLExpress;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=asdf1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
