DoanhHN - commit Supplier

--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -219,11 +219,13 @@
     <Compile Include="Models\Administrator\CreateColorModel.cs" />
     <Compile Include="Models\Administrator\CreateProductCategoryModel.cs" />
     <Compile Include="Models\Administrator\CreateProductModel.cs" />
+    <Compile Include="Models\Administrator\CreateSupplierModel.cs" />
     <Compile Include="Models\Administrator\DetailProductModel.cs" />
     <Compile Include="Models\Administrator\DetailsCustomerModel.cs" />
     <Compile Include="Models\Administrator\UpdateProductModel.cs" />
     <Compile Include="Models\Administrator\ViewProductCategoryModel.cs" />
     <Compile Include="Models\Administrator\ViewProductModel.cs" />
+    <Compile Include="Models\Administrator\ViewSupplierModel.cs" />
     <Compile Include="Models\Constant.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -254,6 +256,7 @@
     <Content Include="Scripts\Admin\js\editors.js" />
     <Content Include="Scripts\Admin\js\forms.js" />
     <Content Include="Scripts\Admin\category.js" />
+    <Content Include="Scripts\Admin\supplier.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\Common\main.js" />
     <Content Include="Scripts\Admin\product.js" />
@@ -1409,6 +1412,10 @@
     <Content Include="Views\Administrator\ViewCustomerDetails.cshtml" />
     <Content Include="Views\Administrator\UpdateCustomer.cshtml" />
     <Content Include="Views\Shared\_LayoutPlain.cshtml" />
+    <Content Include="Views\Administrator\AddSupplier.cshtml" />
+    <Content Include="Views\Administrator\ViewSupplierDetails.cshtml" />
+    <Content Include="Views\Administrator\UpdateSupplier.cshtml" />
+    <Content Include="Views\Administrator\ViewSupplier.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
